k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-web
  namespace: book-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-web
  template:
    metadata:
      labels:
        app: book-web
    spec:
      imagePullSecrets:
      - name: stackit-registry-secret
      containers:
      - name: web
        image: registry.onstackit.cloud/book-inventory/vue-web-app:1.0.3 # Update this path
        ports:
        - containerPort: 80 # Ngnix uses port 80 by default
        # env:
        # - name: READINGLIST_API_ENDPOINT
        #   value: "http://book-api-service/v1/books" # Points directly to the API service above
---
apiVersion: v1
kind: Service
metadata:
  name: book-web-service
  namespace: book-inventory
spec:
  selector:
    app: book-web
  ports:
  - port: 80
    targetPort: 80 # Matches the Ngnix container port
  type: ClusterIP
